--- a/app/src/main/res/layout/fragement_todays_schedule.xml
+++ b/app/src/main/res/layout/fragement_todays_schedule.xml
@@ -33,7 +33,8 @@
             android:id="@+id/scheduleRecyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginBottom="36dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.8"
