--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -61,6 +61,7 @@
             app:SpinKit_Style="DoubleBounce" />
 
         <TextView
+            android:id="@+id/loadingMessageTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
