--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -128,6 +128,7 @@
                 style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="restartActivity"
                 android:padding="16dp"
                 android:text="@string/try_again"
                 android:textSize="18sp" />
