add various ui tweaks

--- a/app/src/main/res/layout/schedule_card.xml
+++ b/app/src/main/res/layout/schedule_card.xml
@@ -107,12 +107,12 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
         android:contentDescription="@string/schedule_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/calendar" />
+        app:srcCompat="@drawable/schedule" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
