--- a/app/src/main/res/layout/sync_dialog.xml
+++ b/app/src/main/res/layout/sync_dialog.xml
@@ -4,30 +4,27 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.github.ybq.android.spinkit.SpinKitView
-        android:id="@+id/spinKitView"
-        style="@style/SpinKitView.Large.Circle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        app:SpinKit_Color="@color/colorAccent"
-        app:SpinKit_Style="MultiplePulse"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
         android:id="@+id/syncTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
+        android:layout_marginStart="16dp"
         android:text="@string/sync"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="@+id/spinKitView"
-        app:layout_constraintStart_toEndOf="@+id/spinKitView"
-        app:layout_constraintTop_toTopOf="@+id/spinKitView" />
+        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
+        app:layout_constraintStart_toEndOf="@+id/progressBar"
+        app:layout_constraintTop_toTopOf="@+id/progressBar" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
