--- a/app/src/main/res/layout/fragement_todays_schedule.xml
+++ b/app/src/main/res/layout/fragement_todays_schedule.xml
@@ -25,6 +25,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="4dp"
+            app:selectionMode="ca.antonious.materialdaypicker.SingleSelectionMode"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
