--- a/app/src/main/res/layout/lecture_card.xml
+++ b/app/src/main/res/layout/lecture_card.xml
@@ -11,8 +11,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/round_border_with_stroke"
-        android:elevation="10dp"
+        android:elevation="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
